navbar spacing fixed

--- a/app/assets/stylesheets/components/generals/_navbar.scss
+++ b/app/assets/stylesheets/components/generals/_navbar.scss
@@ -3,7 +3,8 @@
 .container-user-navbar {
   display: flex;
   height: 48px;
-  justify-content: space-around;
+  padding: 0 24px;
+  justify-content: space-between;
   align-items: center;
   position: fixed;
   top: 0;
@@ -40,7 +41,6 @@
 
   img {
     height: 24px;
-    margin-right: 4px;
   }
 }
 
@@ -62,6 +62,12 @@
   color: #0D6E9A;
 }
 
+#nb-level, #nb-xp, #nb-dish, #nb-cuukies {
+  img {
+    margin-right: 4px;
+  }
+}
+
 #nb-beta {
   color: $gray;
   font-weight: 300;
@@ -69,7 +75,7 @@
   border: 1px solid $gray;
   border-radius: 50px;
   padding: 2px 8px;
-  margin-right: 20px;
+  margin-right: 12px;
 }
 
 // User Footer Navbar
